tests/fail/test_unset_error.tk

pub fn main() -> void {
    auto x#: i32 = unset;
    // EXPECT: Use of unset variable or member 'x'
    auto y = x; 
}
